prototype user defined available tags

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
+        "acreate",
+        "aiohttp",
+        "aiosession",
         "cachetools",
         "gensalt",
         "mday"
